# Useful_Habit_Tracker_DRF

./: .env.sample  .flake8  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
config/: settings.py  urls.py
habit/: models.py  paginators.py  permissions.py  serializers.py  tasks.py  urls.py  validators.py  views.py
habit/migrations/: 0001_initial.py  0002_initial.py
habit/tests/: test_habit_create.py  test_habit_destroy.py  test_habit_list.py  test_habit_retrieve.py  test_habit_update.py  test_public_habit_list.py
users/: models.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_user_chat_id.py  0003_alter_user_chat_id.py
