[tool.poetry]
name = "useful-habit-tracker-drf"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.6"
psycopg2-binary = "^2.9.9"
pillow = "^10.1.0"
djangorestframework = "^3.14.0"
python-dotenv = "^1.0.0"
djangorestframework-simplejwt = "^5.3.0"
requests = "^2.31.0"
redis = "^5.0.1"
celery = "^5.3.4"
django-celery-beat = "^2.5.0"
eventlet = "^0.33.3"
django-cors-headers = "^4.3.0"
drf-spectacular = "^0.26.5"


[tool.poetry.group.dev.dependencies]
ipython = "^8.16.1"
coverage = "^7.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
